# stuard-ai

./: .dockerignore  .gitattributes  .gitignore  .npmrc  .vercelignore  CUSTOM_UI_UPGRADE.md  OC-PUSH-SMOKE.txt  README.md  WAKEWORD_INFERENCE.md  WORKFLOW_IMPROVEMENTS.md  box-ui-workflow.json  custom-cursor-workflow.json  dinosaur-game-workflow.json  listen_numpy.py  mic_rms_meter.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  red-flags.md  telemetry-id  test-electron-icon.js  test-electron-icon2.js  tmpclaude-eb36-cwd  tsconfig.base.json  turbo.json  typecheck-errors.txt  typecheck-errors2.txt  usp-green-flags.md  verify_output.txt
.claude/: settings.local.json
.github/workflows/: build-services.yml  ci-checks.yml  desktop-package.yml  release-beta.yml  release.yml  (+2 more)
apps/agent/native/file-indexer/: Cargo.toml  build.rs
apps/agent/native/file-indexer/scripts/: apply-embed-batch.mjs
apps/agent/native/file-indexer/src/: main.rs
docs/: AI-SYSTEM-REFACTORING.md  FRONTEND_BACKEND_INTEGRATION.md  INLINE_SCRIPTS.md  SUBAGENT_SYSTEM_STATUS.md  SUBAGENT_TEST_CASES.md  codebase-refactoring-plan.md  custom-ui-javascript-api.md  macos-code-signing.md  mcp-server.md  security-audit-report.md
patches/: node-pty@1.0.0.patch
scripts/: calorie_dashboard_pillow_workflow.txt  check-chat-ui-parity.mjs  check-workflow-tool-parity.mjs  dereference-vercel-output.ps1  run-agent.js  run-agent.ps1  run-agent.sh  run-dev-stack-remote.js  test-codex-direct.mjs  version-bump.js
shared/: integration-branding.ts  integration-flags.ts  workflow-topology.ts
(+1918 files in other folders)
