[package]
name = "stuard-file-indexer"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# Windows-only: embeds the Stuard icon + "Stuard AI" version metadata into the
# .exe so it shows up branded in Task Manager / file properties. No-op elsewhere.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossbeam-channel = "0.5"
num_cpus = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
